--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -28,6 +29,8 @@
 
         <activity android:name=".ui.ChoiceIntroActivity"
             android:label="ChoiceIntro" />
+
+        <activity android:name=".ui.ResultActivity" android:label="Result" />
     </application>
 
 </manifest>
