--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -24,13 +24,19 @@
             android:name=".ui.HallActivity"
             android:label="@string/title_activity_hall" >
         </activity>
-        <activity android:name=".ui.VoteActivity"
+        <activity
+            android:name=".ui.VoteActivity"
             android:label="VoteActivity_WebView" />
-
-        <activity android:name=".ui.ChoiceIntroActivity"
+        <activity
+            android:name=".ui.ChoiceIntroActivity"
             android:label="ChoiceIntro" />
-
-        <activity android:name=".ui.ResultActivity" android:label="Result" />
+        <activity
+            android:name=".ui.ResultActivity"
+            android:label="Result" />
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:label="@string/title_activity_register" >
+        </activity>
     </application>
 
 </manifest>
